--- a/TUI.Application/TUI.Application.csproj
+++ b/TUI.Application/TUI.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,6 +16,30 @@
   <ItemGroup>
     <ProjectReference Include="..\TUI.Data\TUI.Data.csproj" />
     <ProjectReference Include="..\TUI.Error\TUI.Error.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Views\Aircrafts\AircraftsPage.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Aircrafts\Partials\AircraftCreate.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Aircrafts\Partials\AircraftsList.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Airports\AirportsPage.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Flights\FlightsPage.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Flights\Partials\FlightCreate.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Flights\Partials\FlightsList.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
   </ItemGroup>
 
 </Project>
